<resources>
    <string name="app_name">labo 04</string>
    <string name="name_hint_text">Name</string>
    <string name="email_hint_text">Email</string>
    <string name="number_hint_text">Number</string>
    <string name="header_text">Rellena la siguiente \ninformacion</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="number_hint">Number</string>
    <string name="text_button_save">Guardar</string>
    <string name="header_text_secondary_view">Confirma tu informacion</string>
    <string name="text_button_share">Compartir</string>
</resources>